--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+    <div id ='protection' ></div>
     <div class="app">
         <div class="header">
-            <h1>Memo test App</h1>            
+            <h1 class='header-title'>Memo test App</h1> 
+            <div class="header-stats">
+                <h3>Score: 0</h3>           
+                <h3>Lifes: 3</h3>
+                <h3>Time 00:00:00</h3>
+            </div>            
         </div>
         <div class="game-board">                    
         </div>
