--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div id ='protection' ></div>
+    <div id ='messages' class="modal hide">
+        <h3 class="modal-title">Game Over!</h3>
+        <p class="modal-paragraph">Your score: 3</p>
+        <button class="modal-btn">Try again.</button>
+    </div>
     <div class="app">
         <div class="header">
             <h1 class='header-title'>Memo test App</h1> 
