cambio en la paleta de colores y mensajes

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memo test with pixabay API</title>
+    <title>Cha Cha Cha Memo Test Game</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <div id ='protection' ></div>
-    <button class ='btn-restart' onclick="$d.location.reload(true);">Reiniciar</button>
+    <button class ='btn-restart btn-restart-hide' onclick="$d.location.reload(true);">Reintentar</button>
     <div id ='messages ' class="modal hide">
-        <h3 class="modal-title">Game Over!</h3>
-        <p class="modal-paragraph">Your score: 3</p>        
+        <h3 class="modal-title"></h3>
+        <p class="modal-paragraph"></p>        
     </div>
     <div class="app">
         <div class="header">
-            <h1 class='header-title'>Memo test App</h1>             
+            <h1 class='header-title'>Cha Cha Cha MemoTest</h1>             
             <div class="header-stats">   
                 <h3 class='stats-lifes'></h3>             
                 <h3 class='stats-score'></h3>             
