--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="game-controls">
             <label for="lang" id="language-lbl">Language</label>
             <select name="lang" id="lang">
-                <option value="0">ESP</option>
-                <option value="1">ENG</option>
+                <option value="0" >ESP</option>
+                <option value="1" selected>ENG</option>
             </select>  
             
         </div>
